Respect newlines on showing body of an Ad.

--- a/app/views/ads/_ad_copy_section.html.erb
+++ b/app/views/ads/_ad_copy_section.html.erb
@@ -1,6 +1,6 @@
 <section class="ad-copy-section">
     <h5>Annonseinfo</h5>
-    <p class="ad-copy-section__body">
-        <%= ad.body %>
-    </p>
+    <div class="ad-copy-section__body">
+        <%= simple_format ad.body %>
+    </div>
 </section>
