--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,100 +1,99 @@
 <%= form_for(@ad, url: (users_ad_path @ad)) do |f| %>
     <% if @ad.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
+        <div id="error_explanation">
+            <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
 
-        <ul>
-        <% @ad.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
-      </div>
+            <ul>
+                <% @ad.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        </div>
     <% end %>
 
-    <h1 class="u-push-down">Legg ut annonse</h1>
-    <p>
-        Legg ut en annonse og tjen penger. Det tar mindre enn ett minutt!
-        <a class="u-hidden-when-grid" href="#ad-input-info">Les mer</a>
-    </p>
+    <h1 class="u-push-down">Legg ut tingene dine</h1>
 
+    <label>Overskrift:</label>
+    <%= f.text_field :title, class: 'u-full-width' %>
 
-    <div class="input-progress"><div class="input-progress__step input-progress__step--current"><strong>Detaljer</strong></div><div class="input-progress__step"><strong>Bilder</strong></div><div class="input-progress__step"><strong>Publiser</strong></div>
+    <div data-controller="syncPayout" class="u-push-down">
+        <div class="row">
+            <div class="five columns">
+                <label>
+                    <span class="label-body">Pris pr dag</span>
+                </label>
+                <%= f.number_field :price,
+                        class: "u-full-width",
+                        placeholder: "Kr 0",
+                        data: {"payout-source" => ""} %>
+            </div>
+            <div class="five columns">
+                <label>
+                    <span class="label-body">Utbetales til deg</span>
+                </label>
+                <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price]">
+            </div>
+        </div>
+
     </div>
 
-    <div class="row">
-        <div class="nine columns">
-            <label>Overskrift:</label>
-            <%= f.text_field :title, class: 'u-full-width' %>
+    <label class="u-push-down">
+        <input type="checkbox">
+        <span class="label-body">
+            Ja, leietaker må tegne <a href="#">forsikring</a> for å leie gjenstanden.
+        </span>
+    </label>
 
-            <div data-controller="syncPayout">
-                <div class="row">
-                    <div class="five columns">
-                        <label>
-                            <span class="label-body">Pris pr dag</span>
-                        </label>
-                        <%= f.number_field :price,
-                                class: "u-full-width",
-                                placeholder: "Kr 0",
-                                data: {"payout-source" => ""} %>
-                    </div>
-                    <div class="five columns">
-                        <label>
-                            <span class="label-body">Utbetales til deg</span>
-                        </label>
-                        <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price]">
-                    </div>
-                </div>
+    <label class="u-push-down">
+        Adresse for henting:
+    </label>
 
-            </div>
+    <%- if @ad.user.locations.length > 0 -%>
+        <div>
 
             <label>
-              <input type="checkbox">
-              <span><small>
-                <%#= f.check_box :require_insurance %> Ja, leietaker må tegne forsikring for å leie objektet.
-              </small></span>
-            </label>
-
-            <label>
-                Adresse for henting:
-            </label>
-
-              <%- if (not @ad.user.locations.nil?) and @ad.user.locations.length > 0 -%>
-              <div>
                 <input type="checkbox">
-                <span><small>
-                    <%#= f.check_box :require_insurance %> Bruk en av mine registrert adresser:
-                </small></span>
-              </div>
-              <div>
-                <%= select( :ad, :location_id, @ad.user.locations.map{ |l| ["#{l.address_line} - #{l.city} - #{l.post_code}", l.id] } ) %>
-              </div>
-              <%- end -%>
+                <span class="label-body">
+                    Bruk en av mine registrert adresser:
+                </span>
+            </label>
 
-
-            <input type="text" class="u-full-width" placeholder="Gateadresse">
-
-            <div class="row">
-                <div class="four columns">
-                    <input type="number" class="u-full-width" placeholder="Postnummer">
-                </div>
-                <div class="eight columns">
-                    <input type="text" class="u-full-width" placeholder="Poststed">
-                </div>
+            <div>
+                <%= select( :ad, :location_id,
+                    @ad.user.locations.map{ |l| ["#{l.address_line} - #{l.city} - #{l.post_code}", l.id] },
+                    {},
+                    { class: 'u-full-width' } ) %>
             </div>
-
-          </div>
         </div>
+    <%- end -%>
+
+    <label class="u-push-down">Legg til en ny adresse for denne annonsen:</label>
+
+    <input type="text" class="u-full-width" placeholder="Gateadresse">
+
+    <div class="row">
+        <div class="four columns">
+            <input type="number" class="u-full-width" placeholder="Postnr.">
+        </div>
+        <div class="eight columns">
+            <input type="text" class="u-full-width" placeholder="Poststed">
+        </div>
+    </div>
+
+    <div class="u-push-down">
+        <label>Beskrivelse</label>
+        <%= f.text_area :body, class: 'u-full-width' %>
 
         <div>
-            <label>Beskrivelse</label>
-            <%= f.text_area :body, class: 'u-full-width'  %>
-
-            <div> tags placeholder: <%= f.text_area :tags, class: 'u-full-width' %> </div>
-
-            <%= f.submit 'Neste steg', class: 'u-pull-right' %>
-            <!-- a class="u-pull-right" href="#">Neste steg</a -->
+            tags placeholder: <%= f.text_field :tags, class: 'u-full-width' %>
         </div>
-        <%= link_to "Vis annonse", (ad_path @ad)  %>
-        <%= link_to "Vis bilder", (users_ad_ad_images_path @ad) %>
 
-    <%- end -%>
+        <%= f.submit 'Neste steg', class: 'u-pull-right button-primary' %>
+    </div>
+
+    <%= link_to "Vis annonse", (ad_path @ad)  %>
+    <%= link_to "Vis bilder", (users_ad_ad_images_path @ad) %>
+
+<%- end -%>
+
+
