--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -4,11 +4,11 @@
             <%= render partial: "ad_title_box", locals: { ad: @ad } %>
             <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
-            <%#= render partial: "availability_section", locals: { ad: @ad } %>
+            <%= render partial: "availability_section", locals: { ad: @ad } %>
+            <%= render partial: "booking_request_form", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
         <div class="five columns">
-            <%= render partial: "booking_request_form", locals: { ad: @ad } %>
             <%= render partial: "slim_map_location", locals: { ad: @ad } %>
             <%= render partial: "more_ads_sidebar", locals: { user: @ad.user } %>
         </div>
