Din konto is actually Bytte Passord. Other simplications.

--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="twelve columns">
-                <% 
+                <%
                     if not defined? selected
                         selected = "Kontrollpanel"
                     end
@@ -12,7 +12,7 @@
                         { text: "Leiehistorikk", path: "#" },
                         { text: "Dine annonser", path: users_ads_path },
                         { text: "Din profil", path: users_edit_path },
-                        { text: "Din konto", path: edit_user_registration_path },
+                        { text: "Bytte passord", path: edit_user_registration_path },
                         { text: "Dine Forespørsler", path: bookings_path }
                     ]
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
