--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,11 @@
                     </div>
 
                     <% if @user.pending_reconfirmation? %>
-                    <div>Currently waiting confirmation for: <%= @user.unconfirmed_email %>. Check your email for instructions on how to confirm it.</div>
+                    <div>Currently waiting confirmation for: <%= @user.unconfirmed_email %>. Check your email for instructions on how to confirm it.
+                    To have the email resent, please go <%= link_to "here", new_user_confirmation_path %>. Your previous email will be kept on file until you have verified the new one.
+                    </div>
+                    <%# TODO(RA): make the link a post to the user's current email.
+                    link_to "here", user_confirmation_path, method: :post, {email: @user.email} ###or similar?%>
                     <% else %>
                     <div>
                         <pre>email is confirmed! <3</pre>
