--- a/app/views/ads/_availability_section.html.erb
+++ b/app/views/ads/_availability_section.html.erb
@@ -1,45 +1,40 @@
-<div class="row">
-<%
+<div class="availability-section">
+    <div class="row">
+    <%
+    today = DateTime.now()
+    [today, today.next_month].each do |d|
 
-today = DateTime.now()
-[today, today.next_month].each do |d|
+      @first_day_of_month = Date.civil( d.year, d.month, 1)
+      @last_day_of_month  = Date.civil( d.year, d.month, -1)
 
-  @first_day_of_month = Date.civil( d.year, d.month, 1)
-  @last_day_of_month  = Date.civil( d.year, d.month, -1)
 
-%>
-    <div class="six columns">
-        <%= d.strftime("%B - %Y") %>
-        <table>
-            <tr>
-                <th>Man.</th>
-                <th>Tir.</th>
-                <th>Ons.</th>
-                <th>Tor.</th>
-                <th>Fre.</th>
-                <th>Lør.</th>
-                <th>Søn.</th>
-            </tr>
-            <tr>
-            <% (@first_day_of_month..@last_day_of_month).each do |d| %>
-                <% if d == @first_day_of_month %>
-                    <% (d.cwday - 1).times do %> <td class='offset'></td> <% end %>
+      # class names
+    %>
+        <div class="six columns">
+            <%= d.strftime("%B - %Y") %>
+            <div class="availability-section__cal">
+                <span class="availability-section__cell--header">Ma</span>
+                <span class="availability-section__cell--header">Ti</span>
+                <span class="availability-section__cell--header">On</span>
+                <span class="availability-section__cell--header">To</span>
+                <span class="availability-section__cell--header">Fr</span>
+                <span class="availability-section__cell--header">Lø</span>
+                <span class="availability-section__cell--header">Sø</span>
+                <% (@first_day_of_month..@last_day_of_month).each do |d| %>
+                    <% if d == @first_day_of_month %>
+                        <% (d.cwday - 1).times do %><span class="availability-section__cell--blank"></span><% end %>
+                    <% end %>
+
+                    <% if d.today? %>
+                        <span class="availability-section__cell--today"><%= d.day %></span>
+                    <% elsif d < today %>
+                        <span class="availability-section__cell--past"><%= d.day %></span>
+                    <% else %>
+                        <span class="availability-section__cell--available"><%= d.day %></span>
+                    <% end %>
                 <% end %>
-                <% if d.cwday == 1 %> </tr><tr> <% end %>
-                <td class="<% if d.today? %>today<% end
-                  if d < today
-                    %>past<%
-                  end
-                   #class="past|available|partial|unavailable"
-                   %> available<%
-                 %>">
-                  <%- if d.today? %><b><% end -%>
-                    <%= d.day %>
-                  <%- if d.today? %></b><% end -%>
-                </td>
-            <% end %>
-            </tr>
-        </table>
+            </div>
+        </div>
+    <% end %>
     </div>
-<% end %>
 </div>
