Added test data for calendar and cleaned up some css

--- a/app/views/ads/_availability_section.html.erb
+++ b/app/views/ads/_availability_section.html.erb
@@ -27,7 +27,10 @@
                         <% elsif d < today %>
                             <span class="availability-section__cell--past"><%= d.day %></span>
                         <% else %>
-                            <span class="availability-section__cell--available"><%= d.day %></span>
+                            <% #for testing purposes:
+                                suffix = ['booked', 'starting', 'ending', 'available'].sample
+                            %>
+                            <span class="availability-section__cell--<%= suffix %>"><%= d.day %></span>
                         <% end %>
                     <% end %>
                 </div>
