--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -5,7 +5,7 @@
             <%= render partial: "ad_gallery_box", locals: { ad: @ad } %>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
             <%= render partial: "availability_section", locals: { ad: @ad } %>
-            <%= render partial: "booking_request_form", locals: { ad: @ad } %>
+            <%#= render partial: "booking_request_form", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
         <div class="five columns">
