--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -18,10 +18,6 @@ $top-bar-height: 52px;
         margin-left: 12px;
         border: solid thin $color-box-border;
 
-        @media screen and (max-width: 640px) {
-            display: none;
-        }
-
     }
     
     & &__search-input {
@@ -52,6 +48,11 @@ $top-bar-height: 52px;
         float: right;
         height: 38px;
         line-height: 38px;
+
+
+        @media screen and (max-width: 640px) {
+            float: none;
+        }
     }
 
     &__navbar-link {
